# tbd_baxter

./: CHANGELOG.md  LICENSE  README.md
tbd_baxter/: CMakeLists.txt  package.xml
tbd_baxter_examples/: CMakeLists.txt  package.xml
tbd_baxter_examples/scripts/: ik_solver_example.py  move_head_example.py
tbd_baxter_gazebo/: CMakeLists.txt  package.xml
tbd_baxter_gazebo/launch/: spawn_all.launch  spawn_baxter.launch
tbd_baxter_head/: CMakeLists.txt  package.xml  setup.py
tbd_baxter_head/launch/: baxter_head.launch  test_head_controller.launch
tbd_baxter_head/python_src/tbd_baxter_head/: HeadController.py
tbd_baxter_head/scripts/: head_controller.py  robocept_face_relay.py  test_head_controller.py
tbd_baxter_msgs/: CMakeLists.txt  package.xml
tbd_baxter_msgs/action/: HeadCmd.action
tbd_baxter_tools/: CMakeLists.txt  package.xml  setup.py
tbd_baxter_tools/launch/: head_controller.launch
tbd_baxter_tools/python_src/tbd_baxter_tools/camera/: __init__.py  camera_control_helpers.py
tbd_baxter_tools/python_src/tbd_baxter_tools/motion/: __init__.py  ik_solver.py  set_posture.py
tbd_baxter_tools/scripts/: camera_controller.py  head_controller.py  image_saver.py  move_to_posture.py  save_posture.py
