<?xml version="1.0"?>
<package format="2">
  <name>tbd_baxter</name>
  <version>0.0.0</version>
  <description>The tbd_baxter package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhi.tan@ri.cmu.edu">zhi</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
